--- a/lib/date-range-picker.css
+++ b/lib/date-range-picker.css
@@ -11,6 +11,10 @@
     padding: 5px 10px;
 }
 
+.date-range-input:hover {
+    background: cornsilk;
+}
+
 .date-range-input:focus, .date-range-input.focus {
     outline: none;
     background: lightcyan;
@@ -165,10 +169,9 @@
     display: none;
 }
 
-.previous-month {
+.month-navigation {
     position: absolute;
     top: 10px;
-    left: 10px;
     border: 0;
     background: blue;
     color: white;
@@ -177,16 +180,20 @@
     z-index: 75;
 }
 
+.month-navigation:focus {
+    outline: 0;
+}
+
+.month-navigation:hover {
+    background: blueviolet
+}
+
+.previous-month {
+    left: 10px;
+}
+
 .next-month {
-    position: absolute;
-    top: 10px;
     right: 10px;
-    border: 0;
-    background: blue;
-    color: white;
-    padding: 5px 10px;
-    cursor: pointer;
-    z-index: 75;
 }
 
 .days {
