--- a/lib/date-range-picker.css
+++ b/lib/date-range-picker.css
@@ -59,7 +59,17 @@
     border-radius: 3px;
     transform: translate(-50%, 10%);
     animation: fadeInDown .2s forwards;
-    
+}
+
+.triangle {
+    width: 15px;
+    height: 15px;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, -187%) rotate(45deg);
+    background: white;
+    border-top: 1px solid grey;
+    border-left: 1px solid grey;
 }
 
 .months-container {
@@ -68,36 +78,6 @@
     grid-column-gap: 20px;
     overflow: hidden;
     height: 95%;
-}
-
-.calendar-display:before {
-    position:absolute;
-    content:"";
-    width:0px;
-    height:0px;
-    border-top: 10px solid transparent;
-    border-right: 10px solid transparent;
-    border-bottom: 10px solid #fff;
-    border-left: 10px solid transparent;
-    top:-19px;
-    left: 50%;
-    transform: translate(-50%);
-    z-index: 50;
-}
-
-.calendar-display:after {
-    position:absolute;
-    content:"";
-    width:0px;
-    height:0px;
-    border-top: 11px solid transparent;
-    border-right: 11px solid transparent;
-    border-bottom: 11px solid #979797;
-    border-left: 11px solid transparent;
-    top:-22px;
-    left: 50%;
-    transform: translate(-50%);
-    z-index: 25;
 }
 
 .month {
